2006-07-31  Sven Panne  <sven.panne@aedion.de>

	* src/al_siteconfig.h: Cleaned up #ifdefs for sized integer types.

	* src/al_siteconfig.h: Nuked ancient Darwin stuff.

	* config-osx.h: Removed.

	* src/backends/alc_backend_wave.c: If needed, open WAVE file in binary
	mode.

2006-07-31  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: add -W flags only for GCC compatible compilers, check
	for more headers, don't build static lib by default, don't work-around
	nasm visibility detection anymore (requires cmake >=2.4)
	
	* src/al_siteconfig.h: some Windows fixes
	
	* src/backends/alc_backend_wave.c, src/alc/alc_context.c: check for
	non-standard headers
	
	* admin/CMakeModules/FindSleepFunction.cmake: always check for unistd.h
	on non-Windows, fix CHECK_INCLUDE_FILE_DEFINE macro
	
	* test/test*: refactor headers into testlib.h, fix windows sleep
	
	* test/testlib.c: fix Sleep tenfold error
	
	* src/extensions/al_ext_vorbis.c: cast data to (ALvoid*) to eliminate
	warning

2006-07-24  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am, src/al_dlopen.c: Compilation fixes for MinGW.

2006-07-20  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_alsa.c: Chris: fixing a problem with the ALSA
	backend using the snd_pcm_format_size function instead of the
	psnd_pcm_format_size function pointer when dynamically loading the lib

2006-07-11  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: added checks for Cygwin
	
2006-07-11  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Include admin/CMakeModules/SelectArgtypes.c.in in source
	distributions.

	* src/backends/alc_backend_windows.c: MMSYSTEM backend fixes based on
	patches from Brian Keener <bkeener@thesoftwaresource.com>. Not really
	tested, but at least things compile under Cygwin.

	* configure.ac, src/backends/alc_backend_oss.c: Added autoconf magic for
	ioctl on Cygwin.

	* src/alc/alc_device.c, src/config/al_config.c: Config file parsing