@@ -18,8 +18,6 @@ typedef unsigned __int32 uint32_t;
 
 #if defined(_WIN32) || defined(__WIN32__)
 #define snprintf _snprintf
-#define strcasecmp _stricmp
-#define strncasecmp _strnicmp
 #endif
 
 #ifdef HAVE___ATTRIBUTE__
